# MesenCE

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  Mesen.sln  README.md  SteamOS.md  makefile
.github/workflows/: android.yml  build.yml  clang-format-check.yml  dotnet-format-check.yml  tests.yml
Android/: README.md  settings.gradle
Android/app/: build.gradle  proguard-rules.pro
Android/app/src/main/cpp/: AndroidKeyManager.cpp  AndroidKeyManager.h  CMakeLists.txt  main.cpp
Core/: Core.vcxproj  Core.vcxproj.filters  pch.h
Core/Debugger/: Base6502Assembler.cpp  BaseEventManager.cpp  BaseEventManager.h  BaseTraceLogger.h  Breakpoint.cpp  Breakpoint.h  BreakpointManager.cpp  BreakpointManager.h  CallstackManager.cpp  CallstackManager.h  CodeDataLogger.cpp  CodeDataLogger.h  DebugBreakHelper.h  DebugTypes.h  DebugUtilities.h  Debugger.cpp  Debugger.h  DebuggerFeatures.h  Disassembler.cpp  Disassembler.h  DisassemblyInfo.cpp  DisassemblyInfo.h  DisassemblySearch.cpp  ExpressionEvaluator.Gameboy.cpp  ExpressionEvaluator.Nes.cpp  ExpressionEvaluator.Sms.cpp  ExpressionEvaluator.Ws.cpp  LuaApi.h  (+21 more)
InteropDLL/: ConfigApiWrapper.cpp  DebugApiWrapper.cpp  EmuApiWrapper.cpp  HistoryApiWrapper.cpp  InputApiWrapper.cpp  InteropDLL.vcxproj  InteropNotificationListener.h  InteropNotificationListeners.h  NetplayApiWrapper.cpp  RecordApiWrapper.cpp  TestApiWrapper.cpp
Linux/: LinuxGameController.cpp  LinuxGameController.h  LinuxKeyManager.cpp  LinuxKeyManager.h  LinuxMouseManager.cpp
Lua/: Lua.vcxproj  lauxlib.c  ldebug.c  lstate.c  lstate.h  lua.h  lvm.c
MacOS/: MacOSKeyManager.h  MacOSKeyManager.mm
PGOHelper/: PGOHelper.cpp  PGOHelper.vcxproj
Sdl/: SdlRenderer.cpp  SdlRenderer.h  SdlSoundManager.cpp  SdlSoundManager.h
SevenZip/: SevenZip.vcxproj
Tests/: RecordedTests.cs  Tests.csproj
UI/: .filenesting.json  App.axaml  App.axaml.cs  MesenWindow.cs  Program.cs  UI.csproj
Utilities/: ArchiveReader.cpp  ArchiveReader.h  AutoResetEvent.h  Base64.h  BitUtilities.h  CRC32.cpp  CompressionHelper.h  EncodingUtilities.h  FastString.h  FolderUtilities.cpp  FolderUtilities.h  HexUtilities.cpp  HexUtilities.h  ISerializable.h  PNGHelper.cpp  PNGHelper.h  PlatformUtilities.cpp  PlatformUtilities.h  SZReader.cpp  SZReader.h  Serializer.cpp  Serializer.h  SimpleLock.cpp  SimpleLock.h  Socket.cpp  Socket.h  StaticFor.h  StringUtilities.h  TimeUtilities.h  Timer.cpp  Timer.h  UPnPPortMapper.cpp  UTF8Util.cpp  UTF8Util.h  Utilities.vcxproj  Utilities.vcxproj.filters  VirtualFile.cpp  VirtualFile.h  ZipReader.cpp  ZipReader.h  (+3 more)
Windows/: Common.h  DirectInputManager.cpp  Renderer.cpp  Renderer.h  SoundManager.cpp  SoundManager.h  Windows.vcxproj  Windows.vcxproj.filters  WindowsKeyManager.cpp  WindowsKeyManager.h  WindowsMouseManager.cpp  XInputManager.cpp  XInputManager.h
(+1186 files in other folders)
